implement SCSS, refresh styles

--- a/design.html
+++ b/design.html
@@ -22,8 +22,7 @@
   <title>Chris Heuberger / design</title>
   <link rel="stylesheet" href="stylesheets/normalize.min.css">
   <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
-  <link href='https://fonts.googleapis.com/css?family=Ropa+Sans:400,400italic' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,800,700italic,800italic' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,600,600i" rel="stylesheet">
   <link rel="stylesheet" href="stylesheets/styles.css">
   <script src="javascripts/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 </head>
@@ -31,131 +30,141 @@
   <!--[if lt IE 7]>
     <p class="browsehappy">Uh-oh! Looks like you're using an <strong>outdated</strong> browser. You should definitely <a href="https://browsehappy.com/">upgrade</a>. May I suggest Google Chrome, Firefox or Safari?</p>
   <![endif]-->
-  <div class="sidebar">
-    <h3 class='nav name'><a class='nav' href="index.html">Chris Heuberger</a></h3>
-    <p class='nav title'>web developer + designer</p>
-    <ul class='nav-ul'>
-      <li><a class='nav' href="about.html">about</a></li>
-      <li><a class='nav' href="development.html">development</a></li>
-      <li><a class='nav current' href="design.html">design</a></li>
-      <li><a class='nav' href="photo.html">photo</a></li>
-      <li><a class='nav' href="play.html">play</a></li><br>
-      <li><a class='nav' href='https://github.com/ChrisBup' target="_blank">GitHub</a></li>
-      <li><a class='nav' href='https://codepen.io/ChrisBup' target="_blank">CodePen</a></li>
-      <li><a class='nav' href='https://dribbble.com/chrisbup' target="_blank">Dribbble</a></li>
-      <li><a class='nav' href='https://www.linkedin.com/in/chrisheuberger/' target="_blank">LinkedIn</a></li>
-      <li><a class='nav' href='https://twitter.com/chrisbup' target="_blank">Twitter</a></li>
-      <li><a class='nav' href='https://instagram.com/chrisbup' target="_blank">Instagram</a></li><br>
-      <li><a class='nav' href='mailto:chrisheuberg@gmail.com' target="_blank" title='chrisheuberg@gmail.com'>email</a></li>
-      <li><a class='nav' href="resume.html">r&eacute;sum&eacute;</a></li>
-    </ul>
-  </div>
 
-  <div class="main-content">
-    <h1 class="all-caps">DESIGN</h1>
-    <br>
-    <div class='grid'>
-      <img src="images/design/ppn1.jpg">
-      <img src="images/design/ppn2.jpg">
-      <img src="images/design/ppn3.jpg">
-      <img src="images/design/ppn4.jpg">
-      <img src="images/design/ppn5.jpg">
-      <img src="images/design/ppn-poster.jpg">
-      <img src="images/design/type-project1.jpg">
-      <img src="images/design/type-project2.jpg">
-      <img src="images/design/blockpartyflyer.jpg">
-      <img src="images/design/blockpartyflyer2.jpg">
-      <img src="images/design/sbp-poster1.jpg">
-      <img src="images/design/sbp-poster2.jpg">
-      <img src="images/design/halloween-flyer.jpg">
-      <img src="images/design/nyfile.jpg">
-      <img src="images/design/concept-dartboard.jpg">
-      <img src="images/design/insert-sample1.jpg">
-      <img src="images/design/insert-sample2.jpg">
-      <img src="images/design/poster-royal-we.jpg">
-      <img src="images/design/poster-union-artwalk.jpg">
-      <img src="images/design/poster-we-are-best.jpg">
-      <img src="images/design/poster-west-egg.jpg">
-      <img src="images/design/poster-whale.jpg">
-      <img src="images/design/fruitcake-bazooka.jpg">
-      <img src="images/design/gold-shoulder.jpg">
-      <img src="images/design/killer-cat.jpg">
-      <img src="images/design/banana-poster.jpg">
-      <img src="images/design/img_7362.jpg">
-      <img src="images/design/img_7363.jpg">
-      <img src="images/design/aiga.jpg">
-      <img src="images/design/aiga2.jpg">
-      <img src="images/design/lp-flyer2.jpg">
-      <img src="images/design/lp-flyer1.jpg">
-      <img src="images/design/lp-flyer3.jpg">
-      <img src="images/design/lp-flyer4.jpg">
-      <img src="images/design/lp-flyer6.jpg">
-      <img src="images/design/lp-flyer8.jpg">
-      <img src="images/design/img_7274.jpg">
-      <img src="images/design/img_7284.jpg">
-      <img src="images/design/img_7292.jpg">
-      <img src="images/design/img_7299.jpg">
-      <img src="images/design/img_7308.jpg">
-      <img src="images/design/img_7290.jpg">
-      <img src="images/design/img_7307.jpg">
-      <img src="images/design/abt.jpg">
-      <img src="images/design/aacc.jpg">
-      <img src="images/design/acc.jpg">
-      <img src="images/design/acc2.jpg">
-      <img src="images/design/acc3.jpg">
-      <img src="images/design/lv.jpg">
-      <img src="images/design/mlk2.jpg">
-      <img src="images/design/mlk3.jpg">
-      <img src="images/design/mlk4.jpg">
-      <img src="images/design/mlk5.jpg">
-      <img src="images/design/mlk7.jpg">
-      <img src="images/design/derby1.jpg">
-      <img src="images/design/derby2.jpg">
-      <img src="images/design/mdg-home.jpg">
-      <img src="images/design/mdg-sample.jpg">
-      <img src="images/design/ht-home.jpg">
-      <img src="images/design/ht-series.jpg">
-      <img src="images/design/otb-logo1.jpg">
-      <img src="images/design/otb-logo2.jpg">
-      <img src="images/design/rh-logo.jpg">
-      <img src="images/design/ranch-logo.jpg">
-      <img src="images/design/coookies.jpg">
-      <img src="images/design/cookielogo1.jpg">
-      <img src="images/design/cookielogo2.jpg">
-      <img src="images/design/logo2.jpg">
-      <img src="images/design/logo3.jpg">
-      <img src="images/design/logo4.jpg">
-      <img src="images/design/ts-logo1.jpg">
-      <img src="images/design/ts-logo2.jpg">
-      <img src="images/design/fiss-logo4.jpg">
-      <img src="images/design/fiss-logo1.jpg">
-      <img src="images/design/fiss-logo2.jpg">
-      <img src="images/design/bmz-lettering-2.jpg">
+  <div class="page-container">
+
+    <div class="sidebar">
+      <a href="#menu" class="mobile-menu-link">menu</a>
+      <h3 class='nav name'><a class='nav' href="index.html">Chris Heuberger</a></h3>
+      <p class='nav title'>frontend web developer</p>
+      <ul id="menu" class="nav-ul">
+        <li><a class='nav' href="about.html">about</a></li>
+        <li><a class='nav' href="development.html">development</a></li>
+        <li><a class='nav current' href="design.html">design</a></li>
+        <li><a class='nav' href="photo.html">photo</a></li>
+        <li><a class='nav' href="play.html">play</a></li><br>
+        <li><a class='nav' href='https://github.com/ChrisBup' target="_blank" rel="noopener noreferrer">GitHub</a></li>
+        <li><a class='nav' href='https://codepen.io/ChrisBup' target="_blank" rel="noopener noreferrer">CodePen</a></li>
+        <li><a class='nav' href='https://dribbble.com/chrisbup' target="_blank" rel="noopener noreferrer">Dribbble</a></li>
+        <li><a class='nav' href='https://www.linkedin.com/in/chrisheuberger/' target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
+        <li><a class='nav' href='https://twitter.com/chrisbup' target="_blank" rel="noopener noreferrer">Twitter</a></li>
+        <li><a class='nav' href='https://instagram.com/chrisbup' target="_blank" rel="noopener noreferrer">Instagram</a></li><br>
+        <li><a class='nav' href='mailto:chrisheuberg@gmail.com' target="_blank" rel="noopener noreferrer" title='chrisheuberg@gmail.com'>email</a></li>
+        <li><a class='nav' href="resume.html">r&eacute;sume</a></li>
+      </ul>
     </div>
-    <div class="popup">
-      <span class='close all-caps'>CLOSE (X)</span>
-      <img class="large" src="">
-      <div class='explainer'></div>
+
+    <div class="main-content">
+      
+      <h1 class="all-caps">DESIGN</h1>
+      <br>
+      <div class='grid'>
+        <img src="images/design/ppn1.jpg">
+        <img src="images/design/ppn2.jpg">
+        <img src="images/design/ppn3.jpg">
+        <img src="images/design/ppn4.jpg">
+        <img src="images/design/ppn5.jpg">
+        <img src="images/design/ppn-poster.jpg">
+        <img src="images/design/type-project1.jpg">
+        <img src="images/design/type-project2.jpg">
+        <img src="images/design/blockpartyflyer.jpg">
+        <img src="images/design/blockpartyflyer2.jpg">
+        <img src="images/design/sbp-poster1.jpg">
+        <img src="images/design/sbp-poster2.jpg">
+        <img src="images/design/halloween-flyer.jpg">
+        <img src="images/design/nyfile.jpg">
+        <img src="images/design/concept-dartboard.jpg">
+        <img src="images/design/insert-sample1.jpg">
+        <img src="images/design/insert-sample2.jpg">
+        <img src="images/design/poster-royal-we.jpg">
+        <img src="images/design/poster-union-artwalk.jpg">
+        <img src="images/design/poster-we-are-best.jpg">
+        <img src="images/design/poster-west-egg.jpg">
+        <img src="images/design/poster-whale.jpg">
+        <img src="images/design/fruitcake-bazooka.jpg">
+        <img src="images/design/gold-shoulder.jpg">
+        <img src="images/design/killer-cat.jpg">
+        <img src="images/design/banana-poster.jpg">
+        <img src="images/design/img_7362.jpg">
+        <img src="images/design/img_7363.jpg">
+        <img src="images/design/aiga.jpg">
+        <img src="images/design/aiga2.jpg">
+        <img src="images/design/lp-flyer2.jpg">
+        <img src="images/design/lp-flyer1.jpg">
+        <img src="images/design/lp-flyer3.jpg">
+        <img src="images/design/lp-flyer4.jpg">
+        <img src="images/design/lp-flyer6.jpg">
+        <img src="images/design/lp-flyer8.jpg">
+        <img src="images/design/img_7274.jpg">
+        <img src="images/design/img_7284.jpg">
+        <img src="images/design/img_7292.jpg">
+        <img src="images/design/img_7299.jpg">
+        <img src="images/design/img_7308.jpg">
+        <img src="images/design/img_7290.jpg">
+        <img src="images/design/img_7307.jpg">
+        <img src="images/design/abt.jpg">
+        <img src="images/design/aacc.jpg">
+        <img src="images/design/acc.jpg">
+        <img src="images/design/acc2.jpg">
+        <img src="images/design/acc3.jpg">
+        <img src="images/design/lv.jpg">
+        <img src="images/design/mlk2.jpg">
+        <img src="images/design/mlk3.jpg">
+        <img src="images/design/mlk4.jpg">
+        <img src="images/design/mlk5.jpg">
+        <img src="images/design/mlk7.jpg">
+        <img src="images/design/derby1.jpg">
+        <img src="images/design/derby2.jpg">
+        <img src="images/design/mdg-home.jpg">
+        <img src="images/design/mdg-sample.jpg">
+        <img src="images/design/ht-home.jpg">
+        <img src="images/design/ht-series.jpg">
+        <img src="images/design/otb-logo1.jpg">
+        <img src="images/design/otb-logo2.jpg">
+        <img src="images/design/rh-logo.jpg">
+        <img src="images/design/ranch-logo.jpg">
+        <img src="images/design/coookies.jpg">
+        <img src="images/design/cookielogo1.jpg">
+        <img src="images/design/cookielogo2.jpg">
+        <img src="images/design/logo2.jpg">
+        <img src="images/design/logo3.jpg">
+        <img src="images/design/logo4.jpg">
+        <img src="images/design/ts-logo1.jpg">
+        <img src="images/design/ts-logo2.jpg">
+        <img src="images/design/fiss-logo4.jpg">
+        <img src="images/design/fiss-logo1.jpg">
+        <img src="images/design/fiss-logo2.jpg">
+        <img src="images/design/bmz-lettering-2.jpg">
+      </div>
+      <div class="popup">
+        <span class='close all-caps'>CLOSE (X)</span>
+        <img class="large" src="">
+        <div class='explainer'></div>
+      </div>
+
+      <div class='shorten'><br><hr><br></div>
+      <p class='top'>top</p>
+
+      <footer>
+        <p>
+          <small>
+              <span class='license'>
+                All work is licensed under a
+                <a rel="license" href="https://creativecommons.org/licenses/by/4.0/">
+                  Creative Commons Attribution 4.0 International License.
+                </a>
+              </span><br>
+            Thanks for reading. Have a <a class='quote'>nice day.</a>
+            <span class='fade'>
+              &nbsp;&mdash;&nbsp;
+              <span class='colorize'>"The details are not the details. They make the design." -Charles Eames</span>
+            </span>
+          </small>
+        </p><br>
+      </footer>
+
     </div>
-    <div class='shorten'><br><hr><br></div>
-    <p class='top'>top</p>
-    <footer>
-      <p>
-        <small>
-            <span class='license'>
-              All work is licensed under a
-              <a rel="license" href="https://creativecommons.org/licenses/by/4.0/">
-                Creative Commons Attribution 4.0 International License.
-              </a>
-            </span><br>
-          Thanks for reading. Have a <a class='quote'>nice day.</a>
-          <span class='fade'>
-            &nbsp;&mdash;&nbsp;
-            <span class='colorize'>"The details are not the details. They make the design." -Charles Eames</span>
-          </span>
-        </small>
-      </p><br>
-    </footer>
+
   </div>
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
