--- a/play.html
+++ b/play.html
@@ -22,70 +22,74 @@
   <title>Chris Heuberger / play</title>
   <link rel="stylesheet" href="stylesheets/normalize.min.css">
   <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
-  <link href='https://fonts.googleapis.com/css?family=Ropa+Sans:400,400italic' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,800,700italic,800italic' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,600,600i" rel="stylesheet">
   <link rel="stylesheet" href="stylesheets/styles.css">
   <script src="javascripts/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 </head>
 <body>
   <!--[if lt IE 7]>
     <p class="browsehappy">Uh-oh! Looks like you're using an <strong>outdated</strong> browser. You should definitely <a href="https://browsehappy.com/">upgrade</a>. May I suggest Google Chrome, Firefox or Safari?</p>
-    <![endif]-->
+  <![endif]-->
+
+  <div class="page-container">
+
     <div class="sidebar">
+      <a href="#menu" class="mobile-menu-link">menu</a>
       <h3 class='nav name'><a class='nav' href="index.html">Chris Heuberger</a></h3>
-      <p class='nav title'>web developer + designer</p>
-      <ul class='nav-ul'>
+      <p class='nav title'>frontend web developer</p>
+      <ul id="menu" class="nav-ul">
         <li><a class='nav' href="about.html">about</a></li>
         <li><a class='nav' href="development.html">development</a></li>
         <li><a class='nav' href="design.html">design</a></li>
         <li><a class='nav' href="photo.html">photo</a></li>
         <li><a class='nav current' href="play.html">play</a></li><br>
-        <li><a class='nav' href='https://github.com/ChrisBup' target="_blank">GitHub</a></li>
-        <li><a class='nav' href='https://codepen.io/ChrisBup' target="_blank">CodePen</a></li>
-        <li><a class='nav' href='https://dribbble.com/chrisbup' target="_blank">Dribbble</a></li>
-        <li><a class='nav' href='https://www.linkedin.com/in/chrisheuberger/' target="_blank">LinkedIn</a></li>
-        <li><a class='nav' href='https://twitter.com/chrisbup' target="_blank">Twitter</a></li>
-        <li><a class='nav' href='https://instagram.com/chrisbup' target="_blank">Instagram</a></li><br>
-        <li><a class='nav' href='mailto:chrisheuberg@gmail.com' target="_blank" title='chrisheuberg@gmail.com'>email</a></li>
-        <li><a class='nav' href="resume.html">r&eacute;sum&eacute;</a></li>
+        <li><a class='nav' href='https://github.com/ChrisBup' target="_blank" rel="noopener noreferrer">GitHub</a></li>
+        <li><a class='nav' href='https://codepen.io/ChrisBup' target="_blank" rel="noopener noreferrer">CodePen</a></li>
+        <li><a class='nav' href='https://dribbble.com/chrisbup' target="_blank" rel="noopener noreferrer">Dribbble</a></li>
+        <li><a class='nav' href='https://www.linkedin.com/in/chrisheuberger/' target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
+        <li><a class='nav' href='https://twitter.com/chrisbup' target="_blank" rel="noopener noreferrer">Twitter</a></li>
+        <li><a class='nav' href='https://instagram.com/chrisbup' target="_blank" rel="noopener noreferrer">Instagram</a></li><br>
+        <li><a class='nav' href='mailto:chrisheuberg@gmail.com' target="_blank" rel="noopener noreferrer" title='chrisheuberg@gmail.com'>email</a></li>
+        <li><a class='nav' href="resume.html">r&eacute;sume</a></li>
       </ul>
     </div>
 
     <div class="main-content">
+
       <h1 class="all-caps">PLAY</h1>
       <h2>
         <span class="sketchbooks">view sketchbooks</span>
-        <a class='resume' href="https://www.sketchbookproject.com/library/15336" target="_blank">(1)</a>
-        <a class='resume' href="https://www.sketchbookproject.com/library/15290" target="_blank">(2)</a>
-        <a class='resume' href="https://www.sketchbookproject.com/library/15335" target="_blank">(3)</a>
+        <a class='resume' href="https://www.sketchbookproject.com/library/15336" target="_blank" rel="noopener noreferrer">(1)</a>
+        <a class='resume' href="https://www.sketchbookproject.com/library/15290" target="_blank" rel="noopener noreferrer">(2)</a>
+        <a class='resume' href="https://www.sketchbookproject.com/library/15335" target="_blank" rel="noopener noreferrer">(3)</a>
       </h2>
       <h2 class="sketchbooks">view
-        <a class="resume" href='https://www.presentationpartynight.com/' target="_blank">PPN</a> presentations
+        <a class="resume" href='https://www.presentationpartynight.com/' target="_blank" rel="noopener noreferrer">PPN</a> presentations
         <a class="resume pres" data-text-swap="(hide)">(show)</a>
       </h2>
       <div class='slide'>
         <p>
           Decision Making
           <span class='align-presentation1'>
-            <a class='nav' href="images/presentations/ppn-decision.pdf" target="_blank">deck</a>
+            <a class='nav' href="images/presentations/ppn-decision.pdf" target="_blank" rel="noopener noreferrer">deck</a>
             /
-            <a class='nav' href="decisions.html" target="_blank">notes</a>
+            <a class='nav' href="decisions.html" target="_blank" rel="noopener noreferrer">notes</a>
           </span>
         </p>
         <p>
           Carrie Nation
           <span class='align-presentation2'>
-            <a class='nav' href="images/presentations/ppn-prohibition.pdf" target="_blank">deck</a>
+            <a class='nav' href="images/presentations/ppn-prohibition.pdf" target="_blank" rel="noopener noreferrer">deck</a>
             /
-            <a class='nav' href="carrie.html" target="_blank">notes</a>
+            <a class='nav' href="carrie.html" target="_blank" rel="noopener noreferrer">notes</a>
           </span>
         </p>
         <p>
           Moral Dilemmas
           <span class='align-presentation3'>
-            <a class='nav' href="images/presentations/ppn-dilemmas.pdf" target="_blank">deck</a>
+            <a class='nav' href="images/presentations/ppn-dilemmas.pdf" target="_blank" rel="noopener noreferrer">deck</a>
             /
-            <a class='nav' href="dilemmas.html" target="_blank">notes</a><br>
+            <a class='nav' href="dilemmas.html" target="_blank" rel="noopener noreferrer">notes</a><br>
           </span>
         </p>
       </div>
@@ -199,8 +203,10 @@
         <img class="large" src="">
         <div class='explainer'></div>
       </div>
+
       <div class='shorten'><br><hr><br></div>
       <p class='top'>top</p>
+
       <footer>
         <p>
           <small>
@@ -218,12 +224,13 @@
           </small>
         </p><br>
       </footer>
+
     </div>
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="javascripts/vendor/jquery-1.11.0.min.js"><\/script>')</script>
-    <script src="javascripts/scripts.js"></script>
-  </body>
-  </html>
+  </div>
 
-
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+  <script>window.jQuery || document.write('<script src="javascripts/vendor/jquery-1.11.0.min.js"><\/script>')</script>
+  <script src="javascripts/scripts.js"></script>
+</body>
+</html>
