--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
       <title>Chris Heuberger / Page Not Found</title>
       <link rel="stylesheet" href="stylesheets/normalize.min.css">
       <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
-      <link href='https://fonts.googleapis.com/css?family=Ropa+Sans' rel='stylesheet' type='text/css'>
+      <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,600,600i" rel="stylesheet">
       <link rel="stylesheet" href="stylesheets/styles.css">
 
       <style>
@@ -45,7 +45,7 @@
         }
 
         ::selection {
-          background: #b3d4fc;
+          background: $light-blue;
           text-shadow: none;
         }
 
@@ -70,7 +70,7 @@
 
         a.broken-link {
           color: #001f3f;
-          font-weight: 400;
+          font-weight: 600;
           text-decoration: none;
         }
 
