--- a/about.html
+++ b/about.html
@@ -22,8 +22,7 @@
   <title>Chris Heuberger / about</title>
   <link rel="stylesheet" href="stylesheets/normalize.min.css">
   <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
-  <link href='https://fonts.googleapis.com/css?family=Ropa+Sans:400,400italic' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,800,700italic,800italic' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,600,600i" rel="stylesheet">
   <link rel="stylesheet" href="stylesheets/styles.css">
   <script src="javascripts/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 </head>
@@ -31,63 +30,69 @@
   <!--[if lt IE 7]>
     <p class="browsehappy">Uh-oh! Looks like you're using an <strong>outdated</strong> browser. You should definitely <a href="https://browsehappy.com/">upgrade</a>. May I suggest Google Chrome, Firefox or Safari?</p>
   <![endif]-->
-  <div class="sidebar flex-item">
-    <h3 class='nav name'><a class='nav' href="index.html">Chris Heuberger</a></h3>
-    <p class='nav title'>web developer + designer</p>
-    <ul class='nav-ul'>
-      <li><a class='nav' href="about.html">about</a></li>
-      <li><a class='nav work-temp' href="#">work</a>&nbsp;<span class='work-temp-fade'><span class='colorize'>coming soon</span></span></li>
-      <!-- <li><a class='nav' href="development.html">development</a></li>
-      <li><a class='nav' href="design.html">design</a></li>
-      <li><a class='nav' href="photo.html">photo</a></li>
-      <li><a class='nav' href="play.html">play</a></li> -->
-      <br>
-      <li><a class='nav' href='https://github.com/ChrisBup' target="_blank">GitHub</a></li>
-      <li><a class='nav' href='https://codepen.io/ChrisBup' target="_blank">CodePen</a></li>
-      <li><a class='nav' href='https://dribbble.com/chrisbup' target="_blank">Dribbble</a></li>
-      <li><a class='nav' href='https://www.linkedin.com/in/chrisheuberger/' target="_blank">LinkedIn</a></li>
-      <li><a class='nav' href='https://twitter.com/chrisbup' target="_blank">Twitter</a></li>
-      <li><a class='nav' href='https://instagram.com/chrisbup' target="_blank">Instagram</a></li><br>
-      <li><a class='nav' href='mailto:chrisheuberg@gmail.com' target="_blank" title='chrisheuberg@gmail.com'>email</a></li>
-      <li><a class='nav cv-temp' href="#">r&eacute;sum&eacute;</a>&nbsp;<span class='cv-temp-fade'><span class='colorize'>coming soon</span></span></li>
-    </ul>
-  </div>
 
-  <div class="main-content">
+  <div class="page-container">
 
-    <div class='about-format'>
-      <h1 class='about all-caps'>ABOUT</h1><br>
-      <img class='about-img' src="images/ch-self-sq.png">
-      <p>Aside from design and development, I like running while listening to podcasts, playing pick-up soccer, cooking mediterranean, and petting any dog I meet. I keep visual journals where I collect design ideas, inspiration, and sketch when I travel. I'm really into side-projects and I love making lists.</p>
+    <div class="sidebar">
+      <a href="#menu" class="mobile-menu-link">menu</a>
+      <h3 class='nav name'><a class='nav' href="index.html">Chris Heuberger</a></h3>
+      <p class='nav title'>frontend web developer</p>
+      <ul id="menu" class="nav-ul">
+        <li><a class='nav' href="about.html">about</a></li>
+        <li><a class='nav work-temp' href="#">work</a>&nbsp;<span class='work-temp-fade'><span class='colorize'>coming soon</span></span></li>
+        <!-- <li><a class='nav' href="development.html">development</a></li>
+        <li><a class='nav' href="design.html">design</a></li>
+        <li><a class='nav' href="photo.html">photo</a></li>
+        <li><a class='nav' href="play.html">play</a></li> -->
+        <br>
+        <li><a class='nav' href='https://github.com/ChrisBup' target="_blank" rel="noopener noreferrer">GitHub</a></li>
+        <li><a class='nav' href='https://codepen.io/ChrisBup' target="_blank" rel="noopener noreferrer">CodePen</a></li>
+        <li><a class='nav' href='https://dribbble.com/chrisbup' target="_blank" rel="noopener noreferrer">Dribbble</a></li>
+        <li><a class='nav' href='https://www.linkedin.com/in/chrisheuberger/' target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
+        <li><a class='nav' href='https://twitter.com/chrisbup' target="_blank" rel="noopener noreferrer">Twitter</a></li>
+        <li><a class='nav' href='https://instagram.com/chrisbup' target="_blank" rel="noopener noreferrer">Instagram</a></li><br>
+        <li><a class='nav' href='mailto:chrisheuberg@gmail.com' target="_blank" rel="noopener noreferrer" title='chrisheuberg@gmail.com'>email</a></li>
+        <li><a class='nav cv-temp' href="#">r&eacute;sume</a>&nbsp;<span class='cv-temp-fade'><span class='colorize'>coming soon</span></span></li>
+      </ul>
     </div>
 
-    <div class='about-sidebar'>
-      <div class='short'>
-        <h2 class='short-title all-caps'>The Short List</h2>
-        <ul>
-          <li>political issue: campaign finance reform</li>
-          <li>life issue: climate change</li>
-          <li>guilty pleasure: showtunes</li>
-          <li>proud accomplishment: I’ve run two marathons.</li>
-          <li>embarassing secret: I own three fanny packs.</li>
-          <li>fascination: behavioral economics</li>
-          <li>hidden talent: I can recite Hamlet's big soliloquy.</li>
-          <li>odd habit: I keep diligent lists of good catch phrases, band names, conversation topics, fun facts, and inpirational quotes.</li>
-          <li>favorite hobby: exploring a new city</li>
-        </ul>
+    <div class="main-content about-content">
+
+      <div class='about-body'>
+        <h1 class='about all-caps'>ABOUT</h1><br>
+        <img class='about-img' src="images/ch-self-sq.png">
+        <p>Aside from design and development, I like running while listening to podcasts, playing pick-up soccer, cooking mediterranean, and petting any dog I meet. I keep visual journals where I collect design ideas, inspiration, and sketch when I travel. I'm really into side-projects and I love making lists.</p>
       </div>
-    </div>
 
-    <footer>
-      <p>
-        <small>Thanks for reading. Have a <a class='quote'>nice day.</a>
-          <span class='fade'>
-            &nbsp;&mdash;&nbsp;
-            <span class='colorize'>"The details are not the details. They make the design." -Charles Eames</span>
-          </span>
-        </small>
-      </p><br>
-    </footer>
+      <div class='about-list'>
+        <div class='short'>
+          <h2 class='short-title all-caps'>The Short List</h2>
+          <ul>
+            <li>political issue: campaign finance reform</li>
+            <li>life issue: climate change</li>
+            <li>guilty pleasure: showtunes</li>
+            <li>proud accomplishment: I’ve run two marathons.</li>
+            <li>embarassing secret: I own three fanny packs.</li>
+            <li>fascination: behavioral economics</li>
+            <li>hidden talent: I can recite Hamlet's big soliloquy.</li>
+            <li>odd habit: I keep diligent lists of good catch phrases, band names, conversation topics, fun facts, and inpirational quotes.</li>
+            <li>favorite hobby: exploring a new city</li>
+          </ul>
+        </div>
+      </div>
+
+      <footer>
+        <p>
+          <small>Thanks for reading. Have a <a class='quote'>nice day.</a>
+            <span class='fade'>
+              &nbsp;&mdash;&nbsp;
+              <span class='colorize'>"The details are not the details. They make the design." -Charles Eames</span>
+            </span>
+          </small>
+        </p><br>
+      </footer>
+
+    </div>
 
   </div>
 
