--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
   <title>Chris Heuberger</title>
   <link rel="stylesheet" href="stylesheets/normalize.min.css">
   <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
-  <link href='https://fonts.googleapis.com/css?family=Ropa+Sans:400,400italic' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,800,700italic,800italic' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,600,600i" rel="stylesheet">
   <link rel="stylesheet" href="stylesheets/styles.css">
   <script src="javascripts/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 </head>
@@ -32,12 +31,13 @@
     <p class="browsehappy">Uh-oh! Looks like you're using an <strong>outdated</strong> browser. You should definitely <a href="https://browsehappy.com/">upgrade</a>. May I suggest Google Chrome, Firefox or Safari?</p>
   <![endif]-->
 
-  <div class="flex-container">
+  <div class="page-container">
 
-    <div class="sidebar flex-item">
+    <div class="sidebar">
+      <a href="#menu" class="mobile-menu-link">menu</a>
       <h3 class='nav name'><a class='nav' href="index.html">Chris Heuberger</a></h3>
-      <p class='nav title'>web developer + designer</p>
-      <ul class='nav-ul'>
+      <p class='nav title'>frontend web developer</p>
+      <ul id="menu" class="nav-ul">
         <li><a class='nav' href="about.html">about</a></li>
         <li><a class='nav work-temp' href="#">work</a>&nbsp;<span class='work-temp-fade'><span class='colorize'>coming soon</span></span></li>
         <!-- <li><a class='nav' href="development.html">development</a></li>
@@ -45,23 +45,25 @@
         <li><a class='nav' href="photo.html">photo</a></li>
         <li><a class='nav' href="play.html">play</a></li> -->
         <br>
-        <li><a class='nav' href='https://github.com/ChrisBup' target="_blank">GitHub</a></li>
-        <li><a class='nav' href='https://codepen.io/ChrisBup' target="_blank">CodePen</a></li>
-        <li><a class='nav' href='https://dribbble.com/chrisbup' target="_blank">Dribbble</a></li>
-        <li><a class='nav' href='https://www.linkedin.com/in/chrisheuberger/' target="_blank">LinkedIn</a></li>
-        <li><a class='nav' href='https://twitter.com/chrisbup' target="_blank">Twitter</a></li>
-        <li><a class='nav' href='https://instagram.com/chrisbup' target="_blank">Instagram</a></li><br>
-        <li><a class='nav' href='mailto:chrisheuberg@gmail.com' target="_blank" title='chrisheuberg@gmail.com'>email</a></li>
-        <li><a class='nav cv-temp' href="#">r&eacute;sum&eacute;</a>&nbsp;<span class='cv-temp-fade'><span class='colorize'>coming soon</span></span></li>
+        <li><a class='nav' href='https://github.com/ChrisBup' target="_blank" rel="noopener noreferrer">GitHub</a></li>
+        <li><a class='nav' href='https://codepen.io/ChrisBup' target="_blank" rel="noopener noreferrer">CodePen</a></li>
+        <li><a class='nav' href='https://dribbble.com/chrisbup' target="_blank" rel="noopener noreferrer">Dribbble</a></li>
+        <li><a class='nav' href='https://www.linkedin.com/in/chrisheuberger/' target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
+        <li><a class='nav' href='https://twitter.com/chrisbup' target="_blank" rel="noopener noreferrer">Twitter</a></li>
+        <li><a class='nav' href='https://instagram.com/chrisbup' target="_blank" rel="noopener noreferrer">Instagram</a></li><br>
+        <li><a class='nav' href='mailto:chrisheuberg@gmail.com' target="_blank" rel="noopener noreferrer" title='chrisheuberg@gmail.com'>email</a></li>
+        <li><a class='nav cv-temp' href="#">r&eacute;sume</a>&nbsp;<span class='cv-temp-fade'><span class='colorize'>coming soon</span></span></li>
       </ul>
     </div>
 
-    <div id="main-content-intro-override" class="main-content flex-item">
+    <div id="homepage-main-content" class="main-content">
 
       <div id='intro'>
         <!-- <span class="close-intro">&times;</span> -->
         <h3 class='highlight'>Hiya, I&#8217;m a web developer at <a href="https://www.radishlab.com" target="_blank">Radish Lab</a> in Bushwick, Brooklyn. I&#8217;m an environmentalist, history nerd, runner, and fanny pack enthusiast. I&#8217;m into social impact projects, data visualization, typography, all forms of design, science, art, and pretty much every other subject. I also lead <a href="https://www.bushwickbrewingtour.com" target="_blank">The Bushwick Brewing Tour</a>. Nice to meet ya.</h3>
       </div>
+
+      <!-- hidden -->
       <div class='venn'>
         <h2 class='interests'>INTERESTS</h2>
         <div class="brain">
@@ -75,6 +77,7 @@
           </div>
         </div>
       </div>
+
       <footer>
         <p>
           <small>Thanks for reading. Have a <a class='quote'>nice day.</a>
@@ -85,6 +88,7 @@
           </small>
         </p><br>
       </footer>
+
     </div>
 
   </div>
