--- a/photo.html
+++ b/photo.html
@@ -22,8 +22,7 @@
   <title>Chris Heuberger / photo</title>
   <link rel="stylesheet" href="stylesheets/normalize.min.css">
   <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
-  <link href='https://fonts.googleapis.com/css?family=Ropa+Sans:400,400italic' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,800,700italic,800italic' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,600,600i" rel="stylesheet">
   <link rel="stylesheet" href="stylesheets/styles.css">
   <script src="javascripts/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 </head>
@@ -31,27 +30,32 @@
   <!--[if lt IE 7]>
     <p class="browsehappy">Uh-oh! Looks like you're using an <strong>outdated</strong> browser. You should definitely <a href="https://browsehappy.com/">upgrade</a>. May I suggest Google Chrome, Firefox or Safari?</p>
   <![endif]-->
-  <div class="sidebar">
-    <h3 class='nav name'><a class='nav' href="index.html">Chris Heuberger</a></h3>
-    <p class='nav title'>web developer + designer</p>
-    <ul class='nav-ul'>
-      <li><a class='nav' href="about.html">about</a></li>
-      <li><a class='nav' href="development.html">development</a></li>
-      <li><a class='nav' href="design.html">design</a></li>
-      <li><a class='nav current' href="photo.html">photo</a></li>
-      <li><a class='nav' href="play.html">play</a></li><br>
-      <li><a class='nav' href='https://github.com/ChrisBup' target="_blank">GitHub</a></li>
-      <li><a class='nav' href='https://codepen.io/ChrisBup' target="_blank">CodePen</a></li>
-      <li><a class='nav' href='https://dribbble.com/chrisbup' target="_blank">Dribbble</a></li>
-      <li><a class='nav' href='https://www.linkedin.com/in/chrisheuberger/' target="_blank">LinkedIn</a></li>
-      <li><a class='nav' href='https://twitter.com/chrisbup' target="_blank">Twitter</a></li>
-      <li><a class='nav' href='https://instagram.com/chrisbup' target="_blank">Instagram</a></li><br>
-      <li><a class='nav' href='mailto:chrisheuberg@gmail.com' target="_blank" title='chrisheuberg@gmail.com'>email</a></li>
-      <li><a class='nav' href="resume.html">r&eacute;sum&eacute;</a></li>
-    </ul>
-  </div>
+
+  <div class="page-container">
+
+    <div class="sidebar">
+      <a href="#menu" class="mobile-menu-link">menu</a>
+      <h3 class='nav name'><a class='nav' href="index.html">Chris Heuberger</a></h3>
+      <p class='nav title'>frontend web developer</p>
+      <ul id="menu" class="nav-ul">
+        <li><a class='nav' href="about.html">about</a></li>
+        <li><a class='nav' href="development.html">development</a></li>
+        <li><a class='nav' href="design.html">design</a></li>
+        <li><a class='nav current' href="photo.html">photo</a></li>
+        <li><a class='nav' href="play.html">play</a></li><br>
+        <li><a class='nav' href='https://github.com/ChrisBup' target="_blank" rel="noopener noreferrer">GitHub</a></li>
+        <li><a class='nav' href='https://codepen.io/ChrisBup' target="_blank" rel="noopener noreferrer">CodePen</a></li>
+        <li><a class='nav' href='https://dribbble.com/chrisbup' target="_blank" rel="noopener noreferrer">Dribbble</a></li>
+        <li><a class='nav' href='https://www.linkedin.com/in/chrisheuberger/' target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
+        <li><a class='nav' href='https://twitter.com/chrisbup' target="_blank" rel="noopener noreferrer">Twitter</a></li>
+        <li><a class='nav' href='https://instagram.com/chrisbup' target="_blank" rel="noopener noreferrer">Instagram</a></li><br>
+        <li><a class='nav' href='mailto:chrisheuberg@gmail.com' target="_blank" rel="noopener noreferrer" title='chrisheuberg@gmail.com'>email</a></li>
+        <li><a class='nav' href="resume.html">r&eacute;sume</a></li>
+      </ul>
+    </div>
 
     <div class="main-content">
+      
       <h1 class="all-caps">PHOTO</h1>
       <br>
       <div class='grid'>
@@ -83,8 +87,10 @@
         <img class="large" src="">
         <div class='explainer'></div>
       </div>
+
       <div class='shorten'><br><hr><br></div>
       <p class='top'>top</p>
+
       <footer>
         <p>
           <small>
@@ -102,7 +108,10 @@
           </small>
         </p><br>
       </footer>
+
     </div>
+
+  </div>
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="javascripts/vendor/jquery-1.11.0.min.js"><\/script>')</script>
