--- a/resume.html
+++ b/resume.html
@@ -19,11 +19,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="HandheldFriendly" content="true">
   <meta name="description" content="The portfolio website of Chris Heuberger - developer / designer / organizer - Brooklyn, NY">
-  <title>Chris Heuberger / r&eacute;sum&eacute;</title>
+  <title>Chris Heuberger / r&eacute;sume</title>
   <link rel="stylesheet" href="stylesheets/normalize.min.css">
   <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
-  <link href='https://fonts.googleapis.com/css?family=Ropa+Sans:400,400italic' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,800,700italic,800italic' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,600,600i" rel="stylesheet">
   <link rel="stylesheet" href="stylesheets/styles.css">
   <script src="javascripts/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 </head>
@@ -31,139 +30,148 @@
   <!--[if lt IE 7]>
     <p class="browsehappy">Uh-oh! Looks like you're using an <strong>outdated</strong> browser. You should definitely <a href="https://browsehappy.com/">upgrade</a>. May I suggest Google Chrome, Firefox or Safari?</p>
   <![endif]-->
-  <div class="sidebar">
-    <h3 class='nav name'><a class='nav' href="index.html">Chris Heuberger</a></h3>
-    <p class='nav title'>web developer + designer</p>
-    <ul class='nav-ul'>
-      <li><a class='nav' href="about.html">about</a></li>
-      <li><a class='nav' href="development.html">development</a></li>
-      <li><a class='nav' href="design.html">design</a></li>
-      <li><a class='nav' href="photo.html">photo</a></li>
-      <li><a class='nav' href="play.html">play</a></li><br>
-      <li><a class='nav' href='https://github.com/ChrisBup' target="_blank">GitHub</a></li>
-      <li><a class='nav' href='https://codepen.io/ChrisBup' target="_blank">CodePen</a></li>
-      <li><a class='nav' href='https://dribbble.com/chrisbup' target="_blank">Dribbble</a></li>
-      <li><a class='nav' href='https://www.linkedin.com/in/chrisheuberger/' target="_blank">LinkedIn</a></li>
-      <li><a class='nav' href='https://twitter.com/chrisbup' target="_blank">Twitter</a></li>
-      <li><a class='nav' href='https://instagram.com/chrisbup' target="_blank">Instagram</a></li><br>
-      <li><a class='nav' href='mailto:chrisheuberg@gmail.com' target="_blank" title='chrisheuberg@gmail.com'>email</a></li>
-      <li><a class='nav current' href="resume.html">r&eacute;sum&eacute;</a></li>
-    </ul>
-  </div>
 
-  <div class="main-content">
-    <div class='resume-format'>
-      <h1 class="all-caps">R&Eacute;SUM&Eacute; /
-        <a class='resume' href="assets/chris-heuberger-resume-2014.pdf" target="_blank">(download pdf)</a>
-      </h1>
+  <div class="page-container">
 
-      <div class='resume-shim'></div>
-      <div class='resume-shim'></div>
-
-      <h4>I'm seeking an entry-level position as a junior full-stack web developer in an agile environment. Having recently transitioned from graphic design, my goal is to craft intelligent code for exceptional user experiences.</h4>
-
-      <div class='resume-shim'></div>
-      <div class='resume-shim'></div>
-      <div class='resume-shim'></div>
-      <div class='resume-shim'></div>
-
-      <h2 class='resume all-caps'>EXPERIENCE</h2>
-      <div class='resume-shim'></div>
-
-      <h3>General Assembly / New York, NY</h3>
-      <h4>Web Development Immersive / April 2014&ndash;July 2014</h4>
-      <ul>
-        <li>completed a 12-week full-time development bootcamp that covers <br>a broad range of topics, all with an emphasis on agile methodology</li>
+    <div class="sidebar">
+      <a href="#menu" class="mobile-menu-link">menu</a>
+      <h3 class='nav name'><a class='nav' href="index.html">Chris Heuberger</a></h3>
+      <p class='nav title'>frontend web developer</p>
+      <ul id="menu" class="nav-ul">
+        <li><a class='nav' href="about.html">about</a></li>
+        <li><a class='nav' href="development.html">development</a></li>
+        <li><a class='nav' href="design.html">design</a></li>
+        <li><a class='nav' href="photo.html">photo</a></li>
+        <li><a class='nav' href="play.html">play</a></li><br>
+        <li><a class='nav' href='https://github.com/ChrisBup' target="_blank" rel="noopener noreferrer">GitHub</a></li>
+        <li><a class='nav' href='https://codepen.io/ChrisBup' target="_blank" rel="noopener noreferrer">CodePen</a></li>
+        <li><a class='nav' href='https://dribbble.com/chrisbup' target="_blank" rel="noopener noreferrer">Dribbble</a></li>
+        <li><a class='nav' href='https://www.linkedin.com/in/chrisheuberger/' target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
+        <li><a class='nav' href='https://twitter.com/chrisbup' target="_blank" rel="noopener noreferrer">Twitter</a></li>
+        <li><a class='nav' href='https://instagram.com/chrisbup' target="_blank" rel="noopener noreferrer">Instagram</a></li><br>
+        <li><a class='nav' href='mailto:chrisheuberg@gmail.com' target="_blank" rel="noopener noreferrer" title='chrisheuberg@gmail.com'>email</a></li>
+        <li><a class='nav current' href="resume.html">r&eacute;sume</a></li>
       </ul>
-
-      <div class='resume-shim'></div>
-
-      <h3>Art House Co-op / Brooklyn, NY</h3>
-      <h4>Curator/Manager, March 2011&ndash;April 2014</h4>
-      <ul>
-        <li>helped run various interactive, crowdsourced art projects, primarily The Sketchbook Project, a traveling exhibition of books from around the world</li>
-        <li>oversaw web store and social media content for The Brooklyn Art Library</li>
-        <li>maintained and curated our collection of over 30,000 sketchbooks</li>
-        <li>designed brand and promotional materials for new projects and events</li>
-        <li>coordinated events and served as press contact for special exhibitions</li>
-      </ul>
-
-      <div class='resume-shim'></div>
-
-      <h3>T Salon / New York, NY</h3>
-      <h4>Graphic Designer, October 2009&ndash;March 2011</h4>
-      <ul>
-        <li>served as art director and marketing director for a boutique tea company</li>
-        <li>led our brand management as we expanded from New York to Los Angeles</li>
-        <li>designed catalogs, custom labels, and promotional material</li>
-        <li>maintained our website and designed our e-newsletters</li>
-        <li>created screen graphics and signage for retail locations and events</li>
-      </ul>
-
-      <div class='resume-shim'></div>
-
-      <h3>The Madison Design Group / Bethesda, MD</h3>
-      <h4>Graphic Designer, October 2005&ndash;September 2009</h4>
-      <ul>
-        <li>designed various materials for print and web such as identity systems, magazines, brochures, annual reports, invitations, e-newsletters and websites</li>
-        <li>managed projects and oversaw production for corporate and non-profit clients</li>
-      </ul>
-
-      <div class='resume-shim'></div>
-      <div class='resume-shim'></div>
-      <div class='resume-shim'></div>
-      <div class='resume-shim'></div>
-
-      <h2 class='resume all-caps'>EDUCATION</h2>
-      <div class='resume-shim'></div>
-
-      <h4>Virginia Tech | College of Architecture and Urban Studies | Blacksburg, VA</h4>
-      <p>BFA in Graphic Design, Minor in Communication | Graduated May 2005</p>
-
-      <div class='resume-shim'></div>
-      <div class='resume-shim'></div>
-      <div class='resume-shim'></div>
-      <div class='resume-shim'></div>
-
-      <h2 class='resume all-caps'>STACK</h2>
-      <div class='resume-shim'></div>
-
-      <p>HTML5 / CSS3</p>
-      <p>Ruby / Rails4 / Sinatra</p>
-      <p>JavaScript / jQuery / AJAX</p>
-      <p>Backbone.js / Node.js / D3.js</p>
-      <p>PostgreSQL / MongoDB</p>
-
-      <div class='resume-shim'></div>
-      <div class='resume-shim'></div>
-      <div class='resume-shim'></div>
-      <div class='resume-shim'></div>
-
-      <h2 class='resume all-caps'>SKILLS</h2>
-      <div class='resume-shim'></div>
-
-      <p>Adobe Creative Suite</p>
-      <p>Microsoft Office Suite</p>
-      <p>GitHub version control</p>
-      <p>test driven development</p>
-      <p>pair programming</p>
-      <p>wireframing</p>
-      <p>illustration</p>
-      <p>photography</p>
-      <p>copywriting</p>
     </div>
-    <div class='shorten'><br><hr><br></div>
-    <p class='top'>top</p>
-    <footer>
-      <p>
-        <small>Thanks for reading. Have a <a class='quote'>nice day.</a>
-          <span class='fade'>
-            &nbsp;&mdash;&nbsp;
-            <span class='colorize'>"The details are not the details. They make the design." -Charles Eames</span>
-          </span>
-        </small>
-      </p><br>
-    </footer>
+
+    <div class="main-content">
+      <div class='resume-format'>
+        <h1 class="all-caps">R&Eacute;SUME /
+          <a class='pdf-link' href="assets/chris-heuberger-resume-2014.pdf" target="_blank" rel="noopener noreferrer">(Open PDF)</a>
+        </h1>
+
+        <div class='resume-shim'></div>
+        <div class='resume-shim'></div>
+
+        <h4>I'm not looking for a permanent position or freelance work right now but feel free to <a href="mailto:chrisheuberg@gmail.com" rel="noopener noreferrer">say hi!</a></h4>
+
+        <div class='resume-shim'></div>
+        <div class='resume-shim'></div>
+        <div class='resume-shim'></div>
+        <div class='resume-shim'></div>
+
+        <h2 class='resume all-caps'>EXPERIENCE</h2>
+        <div class='resume-shim'></div>
+
+        <h3>General Assembly / New York, NY</h3>
+        <h4>Web Development Immersive / April 2014&ndash;July 2014</h4>
+        <ul>
+          <li>completed a 12-week full-time development bootcamp that covers <br>a broad range of topics, all with an emphasis on agile methodology</li>
+        </ul>
+
+        <div class='resume-shim'></div>
+
+        <h3>Art House Co-op / Brooklyn, NY</h3>
+        <h4>Curator/Manager, March 2011&ndash;April 2014</h4>
+        <ul>
+          <li>helped run various interactive, crowdsourced art projects, primarily The Sketchbook Project, a traveling exhibition of books from around the world</li>
+          <li>oversaw web store and social media content for The Brooklyn Art Library</li>
+          <li>maintained and curated our collection of over 30,000 sketchbooks</li>
+          <li>designed brand and promotional materials for new projects and events</li>
+          <li>coordinated events and served as press contact for special exhibitions</li>
+        </ul>
+
+        <div class='resume-shim'></div>
+
+        <h3>T Salon / New York, NY</h3>
+        <h4>Graphic Designer, October 2009&ndash;March 2011</h4>
+        <ul>
+          <li>served as art director and marketing director for a boutique tea company</li>
+          <li>led our brand management as we expanded from New York to Los Angeles</li>
+          <li>designed catalogs, custom labels, and promotional material</li>
+          <li>maintained our website and designed our e-newsletters</li>
+          <li>created screen graphics and signage for retail locations and events</li>
+        </ul>
+
+        <div class='resume-shim'></div>
+
+        <h3>The Madison Design Group / Bethesda, MD</h3>
+        <h4>Graphic Designer, October 2005&ndash;September 2009</h4>
+        <ul>
+          <li>designed various materials for print and web such as identity systems, magazines, brochures, annual reports, invitations, e-newsletters and websites</li>
+          <li>managed projects and oversaw production for corporate and non-profit clients</li>
+        </ul>
+
+        <div class='resume-shim'></div>
+        <div class='resume-shim'></div>
+        <div class='resume-shim'></div>
+        <div class='resume-shim'></div>
+
+        <h2 class='resume all-caps'>EDUCATION</h2>
+        <div class='resume-shim'></div>
+
+        <h4>Virginia Tech | College of Architecture and Urban Studies | Blacksburg, VA</h4>
+        <p>BFA in Graphic Design, Minor in Communication | Graduated May 2005</p>
+
+        <div class='resume-shim'></div>
+        <div class='resume-shim'></div>
+        <div class='resume-shim'></div>
+        <div class='resume-shim'></div>
+
+        <h2 class='resume all-caps'>STACK</h2>
+        <div class='resume-shim'></div>
+
+        <p>HTML5 / CSS3</p>
+        <p>Ruby / Rails4 / Sinatra</p>
+        <p>JavaScript / jQuery / AJAX</p>
+        <p>Backbone.js / Node.js / D3.js</p>
+        <p>PostgreSQL / MongoDB</p>
+
+        <div class='resume-shim'></div>
+        <div class='resume-shim'></div>
+        <div class='resume-shim'></div>
+        <div class='resume-shim'></div>
+
+        <h2 class='resume all-caps'>SKILLS</h2>
+        <div class='resume-shim'></div>
+
+        <p>Adobe Creative Suite</p>
+        <p>Microsoft Office Suite</p>
+        <p>GitHub version control</p>
+        <p>test driven development</p>
+        <p>pair programming</p>
+        <p>wireframing</p>
+        <p>illustration</p>
+        <p>photography</p>
+        <p>copywriting</p>
+      </div>
+
+      <div class='shorten'><br><hr><br></div>
+      <p class='top'>top</p>
+
+      <footer>
+        <p>
+          <small>Thanks for reading. Have a <a class='quote'>nice day.</a>
+            <span class='fade'>
+              &nbsp;&mdash;&nbsp;
+              <span class='colorize'>"The details are not the details. They make the design." -Charles Eames</span>
+            </span>
+          </small>
+        </p><br>
+      </footer>
+
+    </div>
+
   </div>
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
