--- a/development.html
+++ b/development.html
@@ -22,7 +22,7 @@
   <title>Chris Heuberger / development</title>
   <link rel="stylesheet" href="stylesheets/normalize.min.css">
   <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
-  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,600,600i" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,400,400i,600,600i" rel="stylesheet">
   <link rel="stylesheet" href="stylesheets/styles.css">
   <script src="javascripts/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 </head>
@@ -30,73 +30,69 @@
   <!--[if lt IE 7]>
     <p class="browsehappy">Uh-oh! Looks like you're using an <strong>outdated</strong> browser. You should definitely <a href="https://browsehappy.com/">upgrade</a>. May I suggest Google Chrome, Firefox or Safari?</p>
   <![endif]-->
-  <div class="sidebar">
-    <a href="#menu" class="mobile-menu-link">menu</a>
-      <h3 class='nav name'><a class='nav' href="index.html">Chris Heuberger</a></h3>
-      <p class='nav title'>frontend web developer</p>
-      <ul id="menu" class="nav-ul">
-      <li><a class='nav' href="about.html">about</a></li>
-      <li><a class='nav development' href="development.html">development</a></li>
-      <li><a class='nav' href="design.html">design</a></li>
-      <li><a class='nav' href="photo.html">photo</a></li>
-      <li><a class='nav' href="play.html">play</a></li><br>
-      <li><a class='nav' href='https://github.com/ChrisBup' target="_blank" rel="noopener noreferrer">GitHub</a></li>
-      <li><a class='nav' href='https://codepen.io/ChrisBup' target="_blank" rel="noopener noreferrer">CodePen</a></li>
-      <li><a class='nav' href='https://dribbble.com/chrisbup' target="_blank" rel="noopener noreferrer">Dribbble</a></li>
-      <li><a class='nav' href='https://www.linkedin.com/in/chrisheuberger/' target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
-      <li><a class='nav' href='https://twitter.com/chrisbup' target="_blank" rel="noopener noreferrer">Twitter</a></li>
-      <li><a class='nav' href='https://instagram.com/chrisbup' target="_blank" rel="noopener noreferrer">Instagram</a></li><br>
-      <li><a class='nav' href='mailto:chrisheuberg@gmail.com' target="_blank" rel="noopener noreferrer" title='chrisheuberg@gmail.com'>email</a></li>
-      <li><a class='nav' href="resume.html">r&eacute;sume</a></li>
-    </ul>
-  </div>
 
-  <div class="main-content">
-    <h1 class="all-caps">DEVELOPMENT</h1><br>
-    <div class='caption'>
-      <h3 class="all-caps">PERSONAL PROJECTS</h3>
-      <ul class="personal-projects-list">
-        <li class="personal-projects">A crazy long one-page travel log from <a class='about-link' href="https://www.chrisheuberger.com/peru/">my trip to Peru</a>.</li>
-        <li class="personal-projects">My wedding website: <a class='about-link' href="https://www.gtrainlovestory.com/">gtrainlovestory.com</a>.</li>
-        <li class="personal-projects">A prototype for a lifelong record of my niece, <a class='about-link' href="https://www.chrisheuberger.com/jules-timeline/">Jules Nancy Ferrin</a>.</li>
-      </ul>
+  <div class="page-container">
+
+    <div class="sidebar">
+      <a href="#menu" class="mobile-menu-link">menu</a>
+        <h3 class='nav name'><a class='nav' href="index.html">Chris Heuberger</a></h3>
+        <p class='nav title'>frontend web developer</p>
+        <ul id="menu" class="nav-ul">
+          <li><a class='nav' href="about.html">about</a></li>
+          <br>
+          <li><a class='nav' href='https://github.com/ChrisBup' target="_blank" rel="noopener noreferrer">GitHub</a></li>
+          <li><a class='nav' href='https://codepen.io/ChrisBup' target="_blank" rel="noopener noreferrer">CodePen</a></li>
+          <li><a class='nav' href='https://dribbble.com/chrisbup' target="_blank" rel="noopener noreferrer">Dribbble</a></li>
+          <li><a class='nav' href='https://www.linkedin.com/in/chrisheuberger/' target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
+          <li><a class='nav' href='https://twitter.com/chrisbup' target="_blank" rel="noopener noreferrer">Twitter</a></li>
+          <li><a class='nav' href='https://instagram.com/chrisbup' target="_blank" rel="noopener noreferrer">Instagram</a></li>
+          <li><a class='nav' href='mailto:chrisheuberg@gmail.com' target="_blank" rel="noopener noreferrer" title='chrisheuberg@gmail.com'>email</a></li>
+        </ul>
     </div>
-    <div class='caption'>
-      <h3 class="all-caps">CURATOR</h3>
-      <p>Curator allows you to search the entire Brooklyn Museum collection, see information about each piece, and curate your own gallery to help plan your visit. It uses Rails 4, PostgreSQL, and The Brooklyn Museum API.</p>
+
+    <div class="main-content">
+
+      <h1 class="all-caps">DEVELOPMENT</h1><br>
+      <div class='caption'>
+        <h3 class="all-caps">CURATOR</h3>
+        <p>Curator allows you to search the entire Brooklyn Museum collection, see information about each piece, and curate your own gallery to help plan your visit. It uses Rails 4, PostgreSQL, and The Brooklyn Museum API.</p>
+      </div>
+      <div class='screenshot'>
+        <a href="https://curator-app.herokuapp.com/" target="_blank" rel="noopener noreferrer"><img src="images/development/curator1.png"></a>
+        <a href="https://curator-app.herokuapp.com/" target="_blank" rel="noopener noreferrer"><img src="images/development/curator2.png"></a>
+        <a href="https://curator-app.herokuapp.com/" target="_blank" rel="noopener noreferrer"><img src="images/development/curator3.png"></a>
+      </div>
+      <br><hr><br>
+      <div class='caption'>
+        <h3 class="all-caps">VALENCE</h3>
+        <p>Valence is a tool for creating and organizing music playlists and viewing dynamic, animated data visualizations based on song traits like energy, danceability and of course, valence. It uses Rails 4, PostgreSQL, D3, the EchoNest API and the iTunes API.</p>
+      </div>
+      <div class='screenshot'>
+        <a href="https://valence.herokuapp.com/" target="_blank" rel="noopener noreferrer"><img src="images/development/valence1.png"></a>
+        <a href="https://valence.herokuapp.com/" target="_blank" rel="noopener noreferrer"><img src="images/development/valence2.png"></a>
+        <a href="https://valence.herokuapp.com/" target="_blank" rel="noopener noreferrer"><img src="images/development/valence3.png"></a>
+      </div>
+
+      <footer>
+        <p>
+          <small>
+              <span class='license'>
+                All work is licensed under a
+                <a rel="license" href="https://creativecommons.org/licenses/by/4.0/">
+                  Creative Commons Attribution 4.0 International License.
+                </a>
+              </span><br>
+            Thanks for reading. Have a <a class='quote'>nice day.</a>
+            <span class='fade'>
+              &nbsp;&mdash;&nbsp;
+              <span class='colorize'>"The details are not the details. They make the design." -Charles Eames</span>
+            </span>
+          </small>
+        </p><br>
+      </footer>
+
     </div>
-    <div class='screenshot'>
-      <a href="https://curator-app.herokuapp.com/" target="_blank" rel="noopener noreferrer"><img src="images/development/curator1.png"></a>
-      <a href="https://curator-app.herokuapp.com/" target="_blank" rel="noopener noreferrer"><img src="images/development/curator2.png"></a>
-      <a href="https://curator-app.herokuapp.com/" target="_blank" rel="noopener noreferrer"><img src="images/development/curator3.png"></a>
-    </div>
-    <br><hr><br>
-    <div class='caption'>
-      <h3 class="all-caps">VALENCE</h3>
-      <p>Valence is a tool for creating and organizing music playlists and viewing dynamic, animated data visualizations based on song traits like energy, danceability and of course, valence. It uses Rails 4, PostgreSQL, D3, the EchoNest API and the iTunes API.</p>
-    </div>
-    <div class='screenshot'>
-      <a href="https://valence.herokuapp.com/" target="_blank" rel="noopener noreferrer"><img src="images/development/valence1.png"></a>
-      <a href="https://valence.herokuapp.com/" target="_blank" rel="noopener noreferrer"><img src="images/development/valence2.png"></a>
-      <a href="https://valence.herokuapp.com/" target="_blank" rel="noopener noreferrer"><img src="images/development/valence3.png"></a>
-    </div>
-    <footer>
-      <p>
-        <small>
-            <span class='license'>
-              All work is licensed under a
-              <a rel="license" href="https://creativecommons.org/licenses/by/4.0/">
-                Creative Commons Attribution 4.0 International License.
-              </a>
-            </span><br>
-          Thanks for reading. Have a <a class='quote'>nice day.</a>
-          <span class='fade'>
-            &nbsp;&mdash;&nbsp;
-            <span class='colorize'>"The details are not the details. They make the design." -Charles Eames</span>
-          </span>
-        </small>
-      </p><br>
-    </footer>
+
   </div>
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
