--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <title>Chris Heuberger</title>
   <link rel="stylesheet" href="stylesheets/normalize.min.css">
   <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
-  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,600,600i" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,400,400i,600,600i" rel="stylesheet">
   <link rel="stylesheet" href="stylesheets/styles.css">
   <script src="javascripts/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 </head>
@@ -39,20 +39,16 @@
       <p class='nav title'>frontend web developer</p>
       <ul id="menu" class="nav-ul">
         <li><a class='nav' href="about.html">about</a></li>
-        <li><a class='nav work-temp' href="#">work</a>&nbsp;<span class='work-temp-fade'><span class='colorize'>coming soon</span></span></li>
-        <!-- <li><a class='nav' href="development.html">development</a></li>
-        <li><a class='nav' href="design.html">design</a></li>
-        <li><a class='nav' href="photo.html">photo</a></li>
-        <li><a class='nav' href="play.html">play</a></li> -->
+        <!-- <li><a class='nav work-temp' href="#">work</a>&nbsp;<span class='work-temp-fade'><span class='colorize'>coming soon</span></span></li> -->
         <br>
         <li><a class='nav' href='https://github.com/ChrisBup' target="_blank" rel="noopener noreferrer">GitHub</a></li>
         <li><a class='nav' href='https://codepen.io/ChrisBup' target="_blank" rel="noopener noreferrer">CodePen</a></li>
         <li><a class='nav' href='https://dribbble.com/chrisbup' target="_blank" rel="noopener noreferrer">Dribbble</a></li>
         <li><a class='nav' href='https://www.linkedin.com/in/chrisheuberger/' target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
         <li><a class='nav' href='https://twitter.com/chrisbup' target="_blank" rel="noopener noreferrer">Twitter</a></li>
-        <li><a class='nav' href='https://instagram.com/chrisbup' target="_blank" rel="noopener noreferrer">Instagram</a></li><br>
+        <li><a class='nav' href='https://instagram.com/chrisbup' target="_blank" rel="noopener noreferrer">Instagram</a></li>
         <li><a class='nav' href='mailto:chrisheuberg@gmail.com' target="_blank" rel="noopener noreferrer" title='chrisheuberg@gmail.com'>email</a></li>
-        <li><a class='nav cv-temp' href="#">r&eacute;sume</a>&nbsp;<span class='cv-temp-fade'><span class='colorize'>coming soon</span></span></li>
+        <!-- <li><a class='nav cv-temp' href="#">r&eacute;sume</a>&nbsp;<span class='cv-temp-fade'><span class='colorize'>coming soon</span></span></li> -->
       </ul>
     </div>
 
@@ -60,7 +56,7 @@
 
       <div id='intro'>
         <!-- <span class="close-intro">&times;</span> -->
-        <h3 class='highlight'>Hiya, I&#8217;m a web developer at <a href="https://www.radishlab.com" target="_blank">Radish Lab</a> in Bushwick, Brooklyn. I&#8217;m an environmentalist, history nerd, runner, and fanny pack enthusiast. I&#8217;m into social impact projects, data visualization, typography, all forms of design, science, art, and pretty much every other subject. I also lead <a href="https://www.bushwickbrewingtour.com" target="_blank">The Bushwick Brewing Tour</a>. Nice to meet ya.</h3>
+        <h3 class='highlight'>Hi, Chris here. I&#8217;m a web developer at <a href="https://www.radishlab.com" target="_blank" rel="noopener noreferrer">Radish Lab</a> in Bushwick, Brooklyn. I&#8217;m also an environmentalist, history nerd, runner, and fanny pack enthusiast. Here&#8217;s a list of my <a class='nav' href="favorite-things.html">favorite things</a>, some <a class='nav' href="talks.html">talks I&#8217;ve given</a>, and a few <a class='nav' href="side-projects.html">side projects</a>. Do <a class='nav' href='mailto:chrisheuberg@gmail.com' target="_blank" rel="noopener noreferrer" title='chrisheuberg@gmail.com'>say hello</a>.</h3>
       </div>
 
       <!-- hidden -->
