--- a/404.html
+++ b/404.html
@@ -8,89 +8,8 @@
       <title>Chris Heuberger / Page Not Found</title>
       <link rel="stylesheet" href="stylesheets/normalize.min.css">
       <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
-      <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,600,600i" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,400,400i,600,600i" rel="stylesheet">
       <link rel="stylesheet" href="stylesheets/styles.css">
-
-      <style>
-
-        html {
-          font-size: 1em;
-          line-height: 1.4;
-          display: block;
-        }
-
-        html, button, input, select, textarea {
-          color: #222;
-        }
-
-        html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
-          margin: 0;
-          padding: 0;
-          border: 0;
-          vertical-align: baseline;
-        }
-
-        body {
-          margin-top: 10px;
-          font: 1em/1.5 'Ropa Sans', "Helvetica Neue", Helvetica, sans-serif;
-          color: gray;
-          font-weight: 300;
-        }
-
-        h1, h2, h3, h4, h5, h6 {
-          font-weight: 300;
-          color: #222;
-          margin: 0;
-          padding: 0;
-        }
-
-        ::selection {
-          background: $light-blue;
-          text-shadow: none;
-        }
-
-        .broken-container {
-          width: 60%;
-          margin: 5% auto;
-        }
-
-        .broken-header {
-          font-size: 50px;
-        }
-
-        p.broken-float {
-          float: left;
-          padding-top: 20px;
-        }
-
-        .broken-text {
-          font-size: 26px;
-          margin: 1em 0;
-        }
-
-        a.broken-link {
-          color: #001f3f;
-          font-weight: 600;
-          text-decoration: none;
-        }
-
-        a.broken-link:hover {
-          color: #0074D9;
-          text-decoration: underline;
-        }
-
-        span {
-          color: #87ffe3;
-        }
-
-        .broken-pic {
-          width: 50%;
-          float: left;
-          margin-left: -50px;
-        }
-
-      </style>
-
     </head>
     <body>
       <div class="broken-container">
