--- a/favorite-things.html
+++ b/favorite-things.html
@@ -22,7 +22,7 @@
   <title>Chris Heuberger / favoriter things</title>
   <link rel="stylesheet" href="stylesheets/normalize.min.css">
   <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
-  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,600,600i" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,400,400i,600,600i" rel="stylesheet">
   <link rel="stylesheet" href="stylesheets/styles.css">
   <script src="javascripts/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -42,20 +42,14 @@
       <p class='nav title'>frontend web developer</p>
       <ul id="menu" class="nav-ul">
         <li><a class='nav' href="about.html">about</a></li>
-        <li><a class='nav work-temp' href="#">work</a>&nbsp;<span class='work-temp-fade'><span class='colorize'>coming soon</span></span></li>
-        <!-- <li><a class='nav' href="development.html">development</a></li>
-        <li><a class='nav' href="design.html">design</a></li>
-        <li><a class='nav' href="photo.html">photo</a></li>
-        <li><a class='nav' href="play.html">play</a></li> -->
         <br>
         <li><a class='nav' href='https://github.com/ChrisBup' target="_blank" rel="noopener noreferrer">GitHub</a></li>
         <li><a class='nav' href='https://codepen.io/ChrisBup' target="_blank" rel="noopener noreferrer">CodePen</a></li>
         <li><a class='nav' href='https://dribbble.com/chrisbup' target="_blank" rel="noopener noreferrer">Dribbble</a></li>
         <li><a class='nav' href='https://www.linkedin.com/in/chrisheuberger/' target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
         <li><a class='nav' href='https://twitter.com/chrisbup' target="_blank" rel="noopener noreferrer">Twitter</a></li>
-        <li><a class='nav' href='https://instagram.com/chrisbup' target="_blank" rel="noopener noreferrer">Instagram</a></li><br>
+        <li><a class='nav' href='https://instagram.com/chrisbup' target="_blank" rel="noopener noreferrer">Instagram</a></li>
         <li><a class='nav' href='mailto:chrisheuberg@gmail.com' target="_blank" rel="noopener noreferrer" title='chrisheuberg@gmail.com'>email</a></li>
-        <li><a class='nav cv-temp' href="#">r&eacute;sume</a>&nbsp;<span class='cv-temp-fade'><span class='colorize'>coming soon</span></span></li>
       </ul>
     </div>
 
@@ -116,7 +110,7 @@
                 <span class="category">Design</span>
               </div>
               <div class="package">
-                <span class="name"><a class="faves-link" href="https://www.youtube.com/watch?v=KNgA7dDs90E" target="_blank" rel="noopener noreferrer">Some useful data-driven tools to empower tenants in NYC, built by an isnpiring group of civic coders.</a></span><br />
+                <span class="name">Some useful <a class="faves-link" href="https://www.youtube.com/watch?v=KNgA7dDs90E" target="_blank" rel="noopener noreferrer">data-driven tools to empower tenants in NYC</a>, built by an isnpiring group of civic coders.</span><br />
                 <span class="category">Coding</span>
               </div>
               <div class="package">
