--- a/play.html
+++ b/play.html
@@ -22,7 +22,7 @@
   <title>Chris Heuberger / play</title>
   <link rel="stylesheet" href="stylesheets/normalize.min.css">
   <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
-  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,600,600i" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,400,400i,600,600i" rel="stylesheet">
   <link rel="stylesheet" href="stylesheets/styles.css">
   <script src="javascripts/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 </head>
@@ -39,67 +39,26 @@
       <p class='nav title'>frontend web developer</p>
       <ul id="menu" class="nav-ul">
         <li><a class='nav' href="about.html">about</a></li>
-        <li><a class='nav' href="development.html">development</a></li>
-        <li><a class='nav' href="design.html">design</a></li>
-        <li><a class='nav' href="photo.html">photo</a></li>
-        <li><a class='nav current' href="play.html">play</a></li><br>
+        <br>
         <li><a class='nav' href='https://github.com/ChrisBup' target="_blank" rel="noopener noreferrer">GitHub</a></li>
         <li><a class='nav' href='https://codepen.io/ChrisBup' target="_blank" rel="noopener noreferrer">CodePen</a></li>
         <li><a class='nav' href='https://dribbble.com/chrisbup' target="_blank" rel="noopener noreferrer">Dribbble</a></li>
         <li><a class='nav' href='https://www.linkedin.com/in/chrisheuberger/' target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
         <li><a class='nav' href='https://twitter.com/chrisbup' target="_blank" rel="noopener noreferrer">Twitter</a></li>
-        <li><a class='nav' href='https://instagram.com/chrisbup' target="_blank" rel="noopener noreferrer">Instagram</a></li><br>
+        <li><a class='nav' href='https://instagram.com/chrisbup' target="_blank" rel="noopener noreferrer">Instagram</a></li>
         <li><a class='nav' href='mailto:chrisheuberg@gmail.com' target="_blank" rel="noopener noreferrer" title='chrisheuberg@gmail.com'>email</a></li>
-        <li><a class='nav' href="resume.html">r&eacute;sume</a></li>
       </ul>
     </div>
 
     <div class="main-content">
 
       <h1 class="all-caps">PLAY</h1>
-      <h2>
-        <span class="sketchbooks">view sketchbooks</span>
-        <a class='resume' href="https://www.sketchbookproject.com/library/15336" target="_blank" rel="noopener noreferrer">(1)</a>
-        <a class='resume' href="https://www.sketchbookproject.com/library/15290" target="_blank" rel="noopener noreferrer">(2)</a>
-        <a class='resume' href="https://www.sketchbookproject.com/library/15335" target="_blank" rel="noopener noreferrer">(3)</a>
-      </h2>
-      <h2 class="sketchbooks">view
-        <a class="resume" href='https://www.presentationpartynight.com/' target="_blank" rel="noopener noreferrer">PPN</a> presentations
-        <a class="resume pres" data-text-swap="(hide)">(show)</a>
-      </h2>
-      <div class='slide'>
-        <p>
-          Decision Making
-          <span class='align-presentation1'>
-            <a class='nav' href="images/presentations/ppn-decision.pdf" target="_blank" rel="noopener noreferrer">deck</a>
-            /
-            <a class='nav' href="decisions.html" target="_blank" rel="noopener noreferrer">notes</a>
-          </span>
-        </p>
-        <p>
-          Carrie Nation
-          <span class='align-presentation2'>
-            <a class='nav' href="images/presentations/ppn-prohibition.pdf" target="_blank" rel="noopener noreferrer">deck</a>
-            /
-            <a class='nav' href="carrie.html" target="_blank" rel="noopener noreferrer">notes</a>
-          </span>
-        </p>
-        <p>
-          Moral Dilemmas
-          <span class='align-presentation3'>
-            <a class='nav' href="images/presentations/ppn-dilemmas.pdf" target="_blank" rel="noopener noreferrer">deck</a>
-            /
-            <a class='nav' href="dilemmas.html" target="_blank" rel="noopener noreferrer">notes</a><br>
-          </span>
-        </p>
-      </div>
-      <div class='bump'></div>
       <br>
-      <div class="outer-video-container">
-        <div class='embed-container'>
-          <iframe src='https://player.vimeo.com/video/139133207' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-        </div>
-      </div>
+      <h2>view sketchbooks<h2>
+      <a class='resume' href="https://www.sketchbookproject.com/library/15336" target="_blank" rel="noopener noreferrer">(1)</a>
+      <a class='resume' href="https://www.sketchbookproject.com/library/15290" target="_blank" rel="noopener noreferrer">(2)</a>
+      <a class='resume' href="https://www.sketchbookproject.com/library/15335" target="_blank" rel="noopener noreferrer">(3)</a>
+      <div class='bump'></div>
       <br>
       <div class='grid'>
         <img src="images/play/ex1.jpg">
