--- a/side-projects.html
+++ b/side-projects.html
@@ -19,7 +19,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="HandheldFriendly" content="true">
   <meta name="description" content="The portfolio website of Chris Heuberger - developer / designer / organizer - Brooklyn, NY">
-  <title>Chris Heuberger / about</title>
+  <title>Chris Heuberger / side projects</title>
   <link rel="stylesheet" href="stylesheets/normalize.min.css">
   <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,400,400i,600,600i" rel="stylesheet">
@@ -38,7 +38,7 @@
       <h3 class='nav name'><a class='nav' href="index.html">Chris Heuberger</a></h3>
       <p class='nav title'>frontend web developer</p>
       <ul id="menu" class="nav-ul">
-        <li><a class='nav current' href="about.html">about</a></li>
+        <li><a class='nav' href="about.html">about</a></li>
         <br>
         <li><a class='nav' href='https://github.com/ChrisBup' target="_blank" rel="noopener noreferrer">GitHub</a></li>
         <li><a class='nav' href='https://codepen.io/ChrisBup' target="_blank" rel="noopener noreferrer">CodePen</a></li>
@@ -50,34 +50,27 @@
       </ul>
     </div>
 
-    <div class="main-content about-content">
+    <div class="main-content">
 
-      <div class='about-body'>
-        <h1 class='about all-caps'>ABOUT</h1><br>
-        <img class='about-img' src="images/ch-self-sq.png">
-        <p>I’m a full stack web developer, though I focus more on frontend. I’m into social impact projects, data visualization, typography, and all forms of design as well as science, math, art, and pretty much every other subject. I like listening to podcasts, playing pick-up soccer, organizing everything, making lists, cooking mediterranean, and petting any dog I meet. My last name is pronounced <em>HI-ber-ger</em> but I'm not a stickler.</p>
-      </div>
+      <h1 class="all-caps">SIDE PROJECTS</h1>
 
-      <div class='about-list'>
-        <div class='short'>
-          <h2 class='short-title all-caps'>The Short List</h2>
-          <ul>
-            <li>political issue: campaign finance reform</li>
-            <li>life issue: climate change</li>
-            <li>guilty pleasure: showtunes</li>
-            <li>proud accomplishment: I’ve run two marathons.</li>
-            <li>embarassing secret: I own three fanny packs.</li>
-            <li>fascination: behavioral economics</li>
-            <li>hidden talent: I can recite Hamlet's big soliloquy.</li>
-            <li>odd habit: I keep diligent lists of good catch phrases, band names, conversation topics, fun facts, and inpirational quotes.</li>
-            <li>favorite hobby: exploring a new city</li>
-          </ul>
-        </div>
-      </div>
+      <ul class="work-list">
+        <li><a href="https://www.bushwickbrewingtour.com" target="_blank" rel="noopener noreferrer">The Bushwick Brewing Tour</a></li>
+        <li><a href="https://www.chrisheuberger.com/travel/" target="_blank" rel="noopener noreferrer">My travel site</a>, including a crazy long chronicle of an amazing <a href="https://www.chrisheuberger.com/peru/" target="_blank" rel="noopener noreferrer">trip to Peru</a>.</li>
+        <li>My wedding website: <a href="https://www.gtrainlovestory.com/" target="_blank" rel="noopener noreferrer">gtrainlovestory.com</a>.</li>
+        <li>A photo journal through the years I started for my niece, <a href="https://julesferrin.com/" target="_blank" rel="noopener noreferrer">Jules</a> and one for her sister, <a href="https://gretaferrin.com/" target="_blank" rel="noopener noreferrer">Greta</a>.</li>
+      </ul>
 
       <footer>
         <p>
-          <small>Thanks for reading. Have a <a class='quote'>nice day.</a>
+          <small>
+            <span class='license'>
+              All work is licensed under a
+              <a rel="license" href="https://creativecommons.org/licenses/by/4.0/">
+                Creative Commons Attribution 4.0 International License.
+              </a>
+            </span><br>
+            Thanks for reading. Have a <a class='quote'>nice day.</a>
             <span class='fade'>
               &nbsp;&mdash;&nbsp;
               <span class='colorize'>"The details are not the details. They make the design." -Charles Eames</span>
